# meteo-agent

./: README.md  pyproject.toml
meteo_agent_da/: .gitignore  README.md  cli.py  pyproject.toml
meteo_agent_da/agent/: interactive.py  memory.py  planner.py  runtime.py  schemas.py  session.py  tool_registry.py
meteo_agent_da/bench/: __init__.py  evaluate_trace.py  pasbench.py  verifiers.py
meteo_agent_da/docs/: da_generalization_plan.md  interview_playbook.md  paper_alignment_and_next_steps.md  resume_and_paper_pitch.md  three_day_interview_stack.md
meteo_agent_da/examples/: pasbench_da_50.jsonl  pasbench_da_sample.jsonl  run_demo.sh
meteo_agent_da/examples/failure_traces/: dry_run_false_claim.jsonl  invalid_command_path.jsonl  metric_hallucination.jsonl  missing_artifact.jsonl  wrong_tool_selection.jsonl
meteo_agent_da/examples/preference_cases/: concise_vs_hallucinated.jsonl  recovery_vs_failure.jsonl  tool_grounded_vs_text_only.jsonl  verified_vs_unverified.jsonl
meteo_agent_da/meteo_agent_da/: __init__.py  cli.py
meteo_agent_da/meteo_agent_da/agent/: interactive.py  llm_planner.py  planner.py  runtime.py  tool_registry.py
meteo_agent_da/post_training/: build_preference_data.py  build_sft_data.py
meteo_agent_da/sandbox/: __init__.py  executor.py
meteo_agent_da/scripts/: run_build_dpo.sh  run_build_sft.sh  run_dpo_tiny.sh  run_eval_before_after.sh  run_filter_traces.sh  run_reward_export.sh  run_sft_tiny.sh
meteo_agent_da/tests/: test_runtime.py
meteo_agent_da/tools/: __init__.py  data_indexer.py  pasnet_runner.py  registry.py  sanity_checker.py
(+34 files in other folders)
